Add webhook, reformat

--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
-PGDATABASE= 
-PGHOST= 
+PGDATABASE=
+PGHOST=
 PGUSER=
 PGPASSWORD=
 KEEP=1
 MAX_AGE=604800
+CRON_TIME="0 * * * *"
+WEBHOOK_URL=
+API_USER=
+API_PASSWORD=
+API_DEST
+API_SUBJ
